test/core/errors/syntax_error/zs/unexpected_eof_in_array_length_error.zs
package unexpected_eof_in_array_length_error;

struct UnexpectedEofInArrayLength
{
    int32 array[1
